[fix]: add viewencapsulation none for styling on the drawer header not be behind from content

--- a/src/app/layouts/backend/index.component.scss
+++ b/src/app/layouts/backend/index.component.scss
@@ -62,6 +62,7 @@
       top: 0;
       left: 0;
       width: 100%;
+      z-index: 10;
       padding: 0px 30px;
       height: 65px;
       background-color: $white;
